--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1784,7 +1784,7 @@ input[type="reset"],
     opacity: 1; } }
 #banner {
   background-color: #645862;
-  background-image: url("../../images/banner-2018.JPG");
+  background-image: url("../../images/banner-2018.jpg");
   background-size: cover;
   color: #fff;
   cursor: default;
